use switch expressions, getFirst(), toList()